@@ -1,3 +1,10 @@
+2011-02-22 Desmond O. Chang <dochang@gmail.com>
+
+	* src/clfswm.lisp (main): Use ASDF:SYSTEM-SOURCE-DIRECTORY instead
+	of *LOAD-TRUENAME*. *LOAD-TRUENAME* is only bound during a call to
+	LOAD. If one eval CLFSWM:MAIN in repl, BASE-DIR will be an empty
+	string. Use ASDF:SYSTEM-SOURCE-DIRECTORY to fix it.
+
 2011-02-16  Philippe Brochard  <pbrochard@common-lisp.net>
 
 	* src/clfswm.lisp (main-unprotected): Add a close hook. And close
